<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (C) 2003-2014 eXo Platform SAS.

    This is free software; you can redistribute it and/or modify it
    under the terms of the GNU Lesser General Public License as
    published by the Free Software Foundation; either version 3 of
    the License, or (at your option) any later version.

    This software is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
    Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public
    License along with this software; if not, write to the Free
    Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
    02110-1301 USA, or see the FSF site: http://www.fsf.org.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>maven-parent-pom</artifactId>
    <groupId>org.exoplatform</groupId>
    <version>14</version>
    <relativePath />
  </parent>
  <groupId>org.exoplatform.mobile.platform</groupId>
  <artifactId>exo-mobile-android</artifactId>
  <version>2.10-SNAPSHOT</version>
  <packaging>apk</packaging>
  <name>eXo Mobile Android</name>
  <description>eXo Mobile Android project.</description>
  <licenses>
    <license>
      <name>GNU General Lesser Public License (LGPL) version 3.0</name>
      <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:git://github.com/exoplatform/mobile-android.git</connection>
    <developerConnection>scm:git:git@github.com:exoplatform/mobile-android.git</developerConnection>
    <url>http://fisheye.exoplatform.org/browse/mobile-android</url>
  </scm>
  <properties>
    <jira.project.key>MOB</jira.project.key>
    <jenkins.job.name>mobile-android-master-ci</jenkins.job.name>
    <project.src.directory>${project.basedir}/app/src/main</project.src.directory>
    <!-- Android -->
    <android.version>5.0.1_r2</android.version>
    <android.sdk.platform>22</android.sdk.platform>
    <android.support.version>23.1.1</android.support.version>
    <android.annotations.version>24.4.1</android.annotations.version>
    <!-- Android Maven Plugin -->
    <android.maven.plugin.version>4.3.0</android.maven.plugin.version>
    <!-- Libraries -->
    <picasso.version>2.5.2</picasso.version>
    <exo.social.client.version>1.0.3</exo.social.client.version>
    <slf4j-android.version>1.6.1-RC1</slf4j-android.version>
    <crashlytics.version>1.1.13</crashlytics.version>
    <!-- Test Dependencies  -->
    <fest-android.version>1.0.7</fest-android.version>
    <robolectric.version>3.0</robolectric.version>
    <junit.version>4.12</junit.version>
    <android.test.version>4.2.2_r2</android.test.version>
    <!-- Java version -->
    <maven.compiler.target>1.7</maven.compiler.target>
    <maven.compiler.source>1.7</maven.compiler.source>
    <!-- Surefire settings (to be compatible with jacoco we should use a property and not the plugin param) -->
    <argLine>-Xmx1024m</argLine>
  </properties>
  <dependencies>
    <!-- Dependency With Social Client Library -->
    <dependency>
      <groupId>org.exoplatform.social</groupId>
      <artifactId>social-client-java</artifactId>
      <version>${exo.social.client.version}</version>
      <exclusions>
        <!-- Exclusion for slf4j not compatible with android -->
        <exclusion>
          <artifactId>slf4j-api</artifactId>
          <groupId>org.slf4j</groupId>
        </exclusion>
        <exclusion>
          <artifactId>slf4j-log4j12</artifactId>
          <groupId>org.slf4j</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- Dependency With SLF4J for Android -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-android</artifactId>
      <version>${slf4j-android.version}</version>
      <scope>compile</scope>
    </dependency>
    <!-- Dependency With Android -->
    <dependency>
      <groupId>android</groupId>
      <artifactId>android</artifactId>
      <version>${android.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>android.support</groupId>
      <artifactId>compatibility-v4</artifactId>
      <version>${android.support.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.android.annotations</groupId>
      <artifactId>annotations</artifactId>
      <version>${android.annotations.version}</version>
    </dependency>
    <!-- 
    JCIP Annotations are only required during compilation to avoid such warnings:
    [WARNING] ~/.m2/repository/org/apache/httpcomponents/httpclient/4.0/httpclient-4.0.jar!org/apache/http/impl/client/AbstractHttpClient.class:
              org/apache/http/impl/client/AbstractHttpClient.class(org/apache/http/impl/client:AbstractHttpClient.class): 
              warning: Cannot find annotation method 'value()' in type 'net.jcip.annotations.GuardedBy'
    They are not needed at run-time nor in the apk, therefore the scope is 'compile'
     -->
    <dependency>
      <groupId>net.jcip</groupId>
      <artifactId>jcip-annotations</artifactId>
      <version>1.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.squareup.picasso</groupId>
      <artifactId>picasso</artifactId>
      <version>${picasso.version}</version>
    </dependency>
    <!-- Test Dependencies  -->
    <dependency>
      <groupId>com.squareup</groupId>
      <artifactId>fest-android</artifactId>
      <version>${fest-android.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.robolectric</groupId>
      <artifactId>robolectric</artifactId>
      <version>${robolectric.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.robolectric</groupId>
      <artifactId>shadows-core</artifactId>
      <version>${robolectric.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.robolectric</groupId>
      <artifactId>robolectric-resources</artifactId>
      <version>${robolectric.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.robolectric</groupId>
      <artifactId>robolectric-utils</artifactId>
      <version>${robolectric.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.robolectric</groupId>
      <artifactId>robolectric-annotations</artifactId>
      <version>${robolectric.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.robolectric</groupId>
      <artifactId>shadows-httpclient</artifactId>
      <version>${robolectric.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- Dependency with Crashlytics -->
    <dependency>
      <groupId>com.crashlytics.android</groupId>
      <artifactId>crashlytics</artifactId>
      <version>${crashlytics.version}</version>
    </dependency>
  </dependencies>
  <build>
    <sourceDirectory>app/src/main</sourceDirectory>
    <!--testSourceDirectory>app/src/test</testSourceDirectory-->
    <pluginManagement>
      <plugins>
        <!--plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <configuration>
            <includes>
              <include>com/exoplatform/*</include>
              <include>org/exoplatform/*</include>
            </includes>
          </configuration>
        </plugin-->
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>create-version-code</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>create-timestamp</goal>
            </goals>
            <configuration>
              <timestampPropertyName>version.code</timestampPropertyName>
              <timestampFormat>yyMMddHHmm</timestampFormat>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.simpligility.maven.plugins</groupId>
        <artifactId>android-maven-plugin</artifactId>
        <version>${android.maven.plugin.version}</version>
        <extensions>true</extensions>
        <executions>
          <execution>
            <id>merge-version-code</id>
            <phase>process-resources</phase>
            <goals>
              <goal>manifest-merger</goal>
            </goals>
            <configuration>
              <manifestVersionCode>${version.code}</manifestVersionCode>
            </configuration>
          </execution>
          <execution>
            <id>lint</id>
            <goals>
              <goal>lint</goal>
            </goals>
            <configuration />
          </execution>
          <execution>
            <id>alignApk</id>
            <phase>package</phase>
            <goals>
              <goal>zipalign</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <androidManifestFile>${project.src.directory}/AndroidManifest.xml</androidManifestFile>
          <assetsDirectory>${project.src.directory}/assets/</assetsDirectory>
          <resourceDirectory>${project.src.directory}/res/</resourceDirectory>
          <sourceDirectories>
            <sourceDirectory>${project.src.directory}/java/</sourceDirectory>
          </sourceDirectories>
          <nativeLibrariesDirectory>libs</nativeLibrariesDirectory>
          <dexJvmArguments>
            <jvmArgument>-Xshare:auto</jvmArgument>
            <jvmArgument>-Xms128M</jvmArgument>
            <jvmArgument>-Xmx1G</jvmArgument>
            <jvmArgument>-XX:MaxPermSize=256M</jvmArgument>
          </dexJvmArguments>
          <extractDuplicates>true</extractDuplicates>
          <sdk>
            <platform>${android.sdk.platform}</platform>
          </sdk>
        </configuration>
      </plugin>
      <!--plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <includes>
            <include>**/*TestSuite.java</include>
          </includes>
        </configuration>
      </plugin-->
      <!-- Crashlytics maven plugin -->
      <plugin>
        <groupId>com.crashlytics</groupId>
        <artifactId>crashlytics-maven</artifactId>
        <version>1.12.0</version>
        <executions>
          <execution>
            <id>GenerateResources</id>
            <goals>
              <goal>GenerateResources</goal>
            </goals>
          </execution>
          <execution>
            <id>CleanupResources</id>
            <goals>
              <goal>CleanupResources</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <androidManifestPath>${project.src.directory}/AndroidManifest.xml</androidManifestPath>
          <androidAssetsPath>${project.src.directory}/assets</androidAssetsPath>
          <androidResPath>${project.src.directory}/res</androidResPath>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <!-- Profiles definition for Android build -->
  <profiles>
    <profile>
      <id>exo-release</id>
      <properties>
        <!-- To be able to retrieve an unsigned apk
             and use it for publication on android market  -->
        <android.sign.debug>both</android.sign.debug>
      </properties>
    </profile>
  </profiles>
</project>
